UIv2 updates -Re-added padding to main element so windows are properly spaced -Updated window.prepMeasurements so that windows don't shift left+up when a left and top aren't passed in.  Fixes issue #40

--- a/sass/v2/home.scss
+++ b/sass/v2/home.scss
@@ -270,6 +270,7 @@ main {
     bottom: 0;
     left: 0;
     right: 0;
+    padding: 15px;
 }
 
 header {
